# StickInTheMD

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  index.html
.cursor/rules/: build-and-test.mdc  cpp-conventions.mdc  release-and-ci.mdc  stuckinthemd-project.mdc
.github/: ACTIONS_TROUBLESHOOTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  release.yml  reusable-tests.yml
assets/: ui.html
cmake/: app_icon.cmake  embed_ui.cmake  windows_installer.cmake
docs/: 404.html  style.css
include/stickinthemd/: app_controller.hpp  app_settings.hpp  assets.hpp  autosave_controller.hpp  color_theme.hpp  document.hpp  document_store.hpp  file_dialogs.hpp  html_builder.hpp  json_util.hpp  markdown_renderer.hpp  pdf_exporter.hpp  stick_app.hpp  text_normalize.hpp  version.hpp  view_mode.hpp
include/stuckinthemd/: app_controller.hpp  app_settings.hpp  assets.hpp  autosave_controller.hpp  color_theme.hpp  document.hpp  document_store.hpp  external_file_change.hpp  file_dialogs.hpp  html_builder.hpp  json_util.hpp  link_opener.hpp  markdown_renderer.hpp  pdf_exporter.hpp  stuck_app.hpp  text_normalize.hpp  version.hpp  view_mode.hpp
packaging/linux/: stickinthemd.desktop  stuckinthemd.desktop
packaging/windows/: LICENSE.txt  THIRD_PARTY_NOTICES.txt  stickinthemd.iss  stuckinthemd.iss
resources/windows/: app.rc  version.rc.in
scripts/: bootstrap-third-party.sh  build-icons.py  build-macos-icon.sh  build-windows-installer.ps1  generate-release-notes.ps1  generate-release-notes.sh  publish-windows-release.ps1  run-tests.ps1  run-tests.sh
src/app/: stick_app.cpp  stuck_app.cpp
src/core/: app_controller.cpp  autosave_controller.cpp  color_theme.cpp  document.cpp  document_store.cpp  file_dialogs.cpp  html_builder.cpp  link_opener.cpp  markdown_renderer.cpp  pdf_exporter.cpp  text_normalize.cpp  view_mode.cpp
tests/: CMakeLists.txt  test_app_controller.cpp  test_autosave_controller.cpp  test_color_theme.cpp  test_document.cpp  test_document_store.cpp  test_html_builder.cpp  test_json_util.cpp  test_link_opener.cpp  test_markdown_renderer.cpp  test_pdf_exporter.cpp  test_text_normalize.cpp  test_view_mode.cpp
